@@ -4,5 +4,6 @@ require 'rake/testtask'
 
 require 'tasks/testing'
 require 'tasks/distribution'
+require 'tasks/documentation'
 
 
