@@ -1,0 +1,5 @@
+task :docs do
+
+  puts `rdoc`
+
+end
